Fix scrollbar gutter styles

--- a/src/styles/classes.css
+++ b/src/styles/classes.css
@@ -37,10 +37,8 @@
     }
 }
 
-body:has(.dialog-backdrop) {
-    .floating-button-area {
-        margin-bottom: var(--scrollbar-horizontal-height);
-    }
+body:has(.dialog-backdrop) .floating-button-area {
+    margin-bottom: var(--scrollbar-horizontal-height);
 }
 
 .select-none {
