--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,12 @@
+html {
+    scrollbar-gutter: stable;
+}
+
 body {
     margin: 0;
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
     overflow: scroll;
-    scrollbar-gutter: stable;
     --scrollbar-horizontal-height: 0px;
 }
 
